ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_15.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-septuagesima\", \"dominica-of-time-after-epiphany\"]"
expression: s.0
---
2025-02-15
First Vespers of Dominica Septuagesima:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
