ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_16.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-septuagesima\", \"dominica-of-septuagesima\"]"
expression: s.0
---
2025-02-16
Second Vespers of Dominica Septuagesima:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
