ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_21.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-vi-after-septuagesima\", \"feria-of-septuagesima\"]"
expression: s.0
---
2025-02-21
Vespers of Feria VI after Septuagesima:
Vespers:
  Antiphons:   Ordinary of Septuagesima (or Psalter)
  Psalms:      Psalter
  Chapter:     Ordinary of Septuagesima (or Psalter)
  Hymn:        Ordinary of Septuagesima (or Psalter)
  Verse:       Ordinary of Septuagesima (or Psalter)
  Magnificat:  Ordinary of Septuagesima (or Psalter)
  Collect:     of Sunday
