ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_22.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"chair-of-st--peter--apostle\", \"chair-of-st--peter\"]"
expression: s.0
---
2025-02-22
Vespers of Chair of St. Peter, Apostle:
Vespers:
  Antiphons:   Common of Apostles
  Psalms:      Common of Apostles
  Chapter:     Common of Apostles
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
  Commemoration of Dominica Sexagesima:
    Magnificat Antiphon: Proper
    Verse: Proper
    Collect: Proper
